--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
     </div>
     <br />
     <footer>
-        <p>© Copyright Coding Bootcamp 2019</p>
+        <p>© Copyright Varsha Sarabudla 2019</p>
     </footer>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
         integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
